Location had a fixed with on iFrame. Changed to responsive in order to fix overflow issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,7 +44,7 @@
 html {
   margin: 0px;
   padding: 0px;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   -webkit-overflow-scrolling: touch;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom,
